<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MountainBikeOrderActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="switchToOrderDetails"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayoutMountainBikeOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/text_customize_bike"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/imageViewMountainBike"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/text_bike_mountain"
                app:srcCompat="@drawable/mountain_bike" />

            <TextView
                android:id="@+id/textViewMountainBike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/text_bike_mountain" />

            <TextView
                android:id="@+id/textViewManufacturer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/text_manufacturer"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinnerManufacturer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:scrollbarSize="8dp" />

            <TextView
                android:id="@+id/textViewColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/text_bike_color"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinnerColor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:scrollbarSize="8dp" />

            <TextView
                android:id="@+id/textViewFrameSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center_horizontal"
                android:text="@string/text_bike_framesize"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinnerFrameSize"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:scrollbarSize="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewTotal"
                    android:layout_width="194dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_price"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_order_now" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>