<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectBikeTypeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/text_select_style"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/imageViewMountainBike"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:contentDescription="Mountain Bike"
                android:onClick="switchToMountainBike"
                app:srcCompat="@drawable/mountain_bike" />

            <TextView
                android:id="@+id/textViewMountainBike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/text_bike_mountain" />

            <ImageView
                android:id="@+id/imageViewRaceBike"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:contentDescription="Race Bike"
                android:onClick="switchToRaceBike"
                app:srcCompat="@drawable/race_bike" />

            <TextView
                android:id="@+id/textViewRaceBike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/text_bike_race" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>